--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -66,6 +66,12 @@ body {
   box-shadow: 0 6px 20px rgba(110, 0, 255, 0.06);
 }
 
+.logo-img {
+  width: 50px;
+  height: auto;
+  display: block;
+}
+
 .brand-title {
   font-size: 1.25rem;
   margin: 0;
